[tool.poetry]
name = "desafio-ifood"
version = "0.1.0"
description = ""
authors = ["joaohsilva <joaohasilva416@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
